src/app/voting-view/voting-view.component.css
.detailContainer {
  margin: auto;
  padding: 5% 10%;
   /*max-width:  800px; */
}

.carouselContainer {
  margin: auto;
  padding: 2% 0;
}

.votingContainer {
  position: absolute;
  word-break: keep-all;
  width: 100vw;
  height: 100%;
  overflow: hidden;
}

.customVotingContainer {
  position: absolute;
  word-break: keep-all;
  width: 100vw;
  height: 100%;
  overflow: hidden;
}

.thankyouContainer {
  position: absolute;
  word-break: keep-all;
  width: 100vw;
  overflow: hidden;
  padding-top: 20%;
}
.thankyou {
  font-family: "HelveticaNeueW02-45Light", Helvetica, sans-serif;
  width: 70%;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  font-size: 2em;
}
.thankyou p {
  color: black;
}


/*  Intro Text */
.voting-textblock1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 330px;
}
.voting-textblock1 img {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 330px;
  height: 200px;
}
    .voting-staticTitle {
      text-transform: uppercase;
      font-family: "HelveticaNeueW02-UltLight", Helvetica, sans-serif;
      font-size: 1em;
      margin: 15px;
    }

    .voting-staticSubtitle {
      font-family:"HelveticaNeueW02-75Bold", Helvetica, sans-serif;
      font-size: 2em;
      /* font-size: 0.8em; */
      margin: 10px 10px;
      width: 280px;
    }

/*  Question - Grouping Caption Title & Subtitle */
.voting-questionblock {
  position: absolute;
  min-width: 470px;
  top: 0;
  right: 0;
}


        /* Image of lines connecting question to Contributions */
        .voting-pil {
          position: absolute;
          left: -225px;
          top: 50px;
          width: 400px;
          z-index: 100;
        }

        /* A single Contribution item */
        .voteContributionDisplayBox1 {
          position: absolute;
          top: 270px;
          left: -300px;
          cursor: pointer;
        }

        /* A single Contribution item */
        .voteContributionDisplayBox2 {
          position: absolute;
          top: 270px;
          left: 100px;
          cursor: pointer;
        }

    .voting-categoryTitle {
      /* text-transform: uppercase; */
      /* font-family: "HelveticaNeueW02-UltLight", Helvetica, sans-serif; */
      font-family: Helvetica, sans-serif;
      font-size: 5em;
      margin: 0 15px;
      display: inline-block;
      text-align: center;
      max-width: 50vw;
    }

    .voting-categorySubtitle {
      font-family: "HelveticaNeueW02-UltLight", Helvetica, sans-serif;
      font-size: 1em;
      margin: 15px;
      display: inline-block;
    }


/*  Info on right */
.voting-textblock3 {
  position: absolute;
  top: 55%;
  right: 10px;
  width: 190px;
  font-family: "HelveticaNeueW02-UltLight", Helvetica, sans-serif;
  font-size: 1em;
  text-align: right;
  line-height: 2em;
}
.voting-textblock3 img {
  position: absolute;
  top: -110px;
  right: -220px;
  z-index: -1;
  width: 400px;
  height: 450px;
}

/*  Info on bottom right */
.voting-textblock4 {
  position: absolute;
  bottom: 0;
  padding: 5px;
  right: 10px;
  /* width: 130px; */
  /* height: 170px; */
  font-family: "HelveticaNeueW02-UltLight", Helvetica, sans-serif;
  font-size: 0.7em;
  text-align: justify;
}
.voting-textblock4 img {
  opacity: 0.2;
  width: 130px;
}

.custom-voting-close {
  position: absolute;
  left: 80%;
  top: 10%;
  cursor: pointer;
}
.custom-voting-close img {
  width: 60px;
}

/* Buttons for both, neither, own contribution */
.voting-buttonblock {
  position: absolute;
  bottom: 20px;
  left: 0;
}
.voting-buttonblock-button {
  display: inline-block;
  margin-left: 200px;
  font-family:"HelveticaNeueW02-75Bold", Helvetica, sans-serif;
  cursor: pointer;
}
.voting-buttonblock-button img {
  width: 100px;
}

.voting-iframe {
  position: absolute;
  height: 300px;
  width: 100%;
  bottom: 50px;
  left: 100px;
}

.custom-voting-button-container {
  position: absolute;
  bottom: 50px;
  font-family: "HelveticaNeueW02-45Light", Helvetica, sans-serif;
  font-size: 1.8em;
  text-align: justify;
  width: 100%;
}

.custom-voting-button {
  border: dashed rgba(0,100,0,0.4) 3px;
  border-radius: 15px;
  width: 530px;
  margin-left: auto;
  margin-right: auto;
  background-color: white;
  position: relative;
  padding: 5px;
  cursor: pointer;
}
.custom-voting-button span {
  display: inline-block;
}

.smaller-voting-button {
  border: dashed rgba(0,100,0,0.4) 3px;
  border-radius: 15px;
  width: 250px;
  margin-bottom: 5px;
  background-color: white;
  position: relative;
  padding: 4px;
  cursor: pointer
}

.checkbox-container {
  display: inline-block;
  font-family:"HelveticaNeueW02-75Bold", Helvetica, sans-serif;
  text-align: center;
  color: rgb(0,100,0);
  background-color: rgba(255,255,255,0.6);
  font-size: 0.8em;
  padding-top: 5px;
}

.checkbox-container #checkboxWord {
  line-height: 0.6;
  font-size: 2em;
}
.checkbox-container #voteWord {
  font-size: 0.5em;
}

.opinion-form-container {
  position: absolute;
  width: 100%;
  margin-bottom: 10%;
  bottom: 0;
}
.opinion-form {
  position: relative;
  width: 70%;
  height: 20%;
  margin-left: auto;
  margin-right: auto;
}

.opinion-input {
  width: 80%;
  height: 70px;
  border: solid black;
}
.opinion-text {
  font-family:"HelveticaNeueW02-75Bold", Helvetica, sans-serif;
  font-size: 1em;
  margin-right: 5px;
  margin-top: 30px;
}
.opinion-text label {
  margin-right: 20px;
}

.opinion-button {
  color: white;
  font-family: "HelveticaNeueW02-75", Helvetica, sans-serif;
  font-size: 1em;
  background-color: olivedrab;
  border: none;
  padding:7px;
  margin-left: 20px;
  cursor: pointer
}

#answer-controls {
  background-color: blue;
}


.text-mainHeading {
  font-family:"HelveticaNeueW02-UltLight", Helvetica, sans-serif;
  font-size: 4em;
  text-align: center;
  width: 100%;
  margin: 20px;
}

.text-subHeading {
  font-family:"HelveticaNeueW02-75Bold", Helvetica, sans-serif;
  font-size: 1.5em;
  margin: 20px 0;
}

.text-bold {
  font-weight: bold;
}

.text-footnote {
  font-size: 0.75em;
}

.freewall {
  width: 100%;
  margin: auto;
  display: inline-block;
}



@keyframes pulse_animation {
  0% { transform: scale(1); }
  50% { transform: scale(1.05); }
  100% { transform: scale(1); }
}
.pulse {
  animation-name: pulse_animation;
  animation-duration: 5000ms;
  transform-origin:70% 70%;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
}



.voting-questionmark {
  margin: 30px 0;
}
.voting-questionmark img {
  width: 60px;
}

@media all and (max-width: 1024px) {
  .text-mainHeading {
    font-size: 2em;
    margin: 10px 5px;
  }

  .serendipitous-categoryTitle {
    padding: 5% 3%;
    font-size: 2em;
  }

  .serendipitous-categorySubtitle {
    padding: 5% 3%;
    font-size: 1.5em;
  }

  .serendipitous-questionmark {
    padding-bottom: 30%;
  }

  .voting-questionblock {
    min-width: 200px;
  }

}


@media all and (max-width: 450px) {
  .text-mainHeading {
    font-size: 2em;
    margin: 10px 5px;
  }

  .serendipitous-categoryTitle {
    padding: 5% 3%;
    font-size: 2em;
  }

  .serendipitous-categorySubtitle {
    padding: 5% 3%;
    font-size: 1.5em;
  }

  .serendipitous-questionmark {
    padding-bottom: 30%;
  }

  .voting-questionblock {
    min-width: 200px;
  }


  .votingContainer {
    position: relative;
    overflow-x: hidden;
    height: auto;
    width: 100%;
  }


  /*  Intro Text */
  .voting-textblock1 {
    position: relative;
    width: 200px;
  }
  .voting-textblock1 img {
    position: absolute;
    top: -10px;
    left: 0;
    z-index: -1;
    width: 200px;
    height: 100px;
  }
  .voting-staticTitle {
    text-transform: uppercase;
    font-family: "HelveticaNeueW02-UltLight", Helvetica, sans-serif;
    font-size: 1em;
    margin: 15px;
  }

  .voting-staticSubtitle {
    font-family:"HelveticaNeueW02-75Bold", Helvetica, sans-serif;
    font-size: 1em;
    /* font-size: 0.8em; */
    margin: 10px 10px;
    width: 180px;
  }

  /*  Question - Grouping Caption Title & Subtitle */
  .voting-questionblock {
    position: relative;
    width: 100%;
    top: 0;
  }


  /* Image of lines connecting question to Contributions */
  .voting-pil {
    display: none;
  }

  /* A single Contribution item */
  .voteContributionDisplayBox1 {
    position: relative;
    top: 0;
    left: 0;
  }

  /* A single Contribution item */
  .voteContributionDisplayBox2 {
    position: relative;
    top: 0;
    left: 0;
  }

  .voting-categoryTitle {
    /* text-transform: uppercase; */
    /* font-family: "HelveticaNeueW02-UltLight", Helvetica, sans-serif; */
    font-family: Helvetica, sans-serif;
    font-size: 3em;
    margin: 0 15px 20px;
    display: inline-block;
    text-align: center;
    max-width: 100%;
  }

  .voting-categorySubtitle {
    font-family: "HelveticaNeueW02-UltLight", Helvetica, sans-serif;
    font-size: 1em;
    margin: 15px;
    display: inline-block;
  }

  .custom-voting-button-container {
    position: relative;
    bottom: unset;
    margin: 20px auto 100px auto;
    font-family: "HelveticaNeueW02-45Light", Helvetica, sans-serif;
    font-size: 1.3em;
    text-align: center;
    width: 90%;
  }

  .custom-voting-button {
    width: auto;
  }

  .opinion-form-container {
    margin-bottom: 100px;
  }
  .opinion-form {
    width: 90%;
  }
  .opinion-input {
    width: 100%;
  }
  .opinion-text label {
    margin-right: 5px;
  }
  .opinion-button {
    margin-top: 30px;
    font-size: 1.3em;
    cursor: pointer
  }
  .text-footnote {
    margin-top: 30px;
  }


  /*  Info on right */
  .voting-textblock3 {
    position: relative;
    top: 0;
    right: 0;
    width: 100%;
    font-family: "HelveticaNeueW02-UltLight", Helvetica, sans-serif;
    font-size: 0.7em;
    text-align: right;
  }
  .voting-textblock3 img {
    position: absolute;
    top: -120px;
    right: -220px;
    z-index: -1;
    width: 330px;
    height: 380px;
  }
  .voting-textblock3 p {
    padding-right: 5px;
  }

  /*  Info on bottom right */
  .voting-textblock4 {
    position: absolute;
    bottom: 0;
    padding: 5px;
    right: 10px;
    /* width: 130px; */
    /* height: 170px; */
    font-family: "HelveticaNeueW02-UltLight", Helvetica, sans-serif;
    font-size: 0.7em;
    text-align: justify;
  }
  .voting-textblock4 img {
    opacity: 0.2;
    width: 130px;
  }




}

